--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
+     <!-- Special fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet">
+
+    <!-- Navigation Bar CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+     <!-- Special icons -->
+    <script src="https://kit.fontawesome.com/81fcba49b6.js" crossorigin="anonymous"></script>
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
@@ -15,15 +24,35 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+  
   </head>
 
   <body>
-    <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <!-- Top nav bar -->
+    <nav class="nav-Bar">
+      <div> 
+        <span class="logo">TWEETER</span> 
+      </div>
+      <footer>     
+        <button class='write'>
+          <span><b>Write</b> a new tweet</span>
+          <i class="fas fa-angle-double-down"></i>
+        </button>
+      </footer>
     </nav>
+    
+    <!-- Header section -->
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
 
-    <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main></main>
   </body>
 </html>
+
