--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
     <!-- Navigation Bar CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    
+    <!-- Header CSS -->
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
      <!-- Special icons -->
     <script src="https://kit.fontawesome.com/81fcba49b6.js" crossorigin="anonymous"></script>
@@ -40,19 +43,25 @@
         </button>
       </footer>
     </nav>
-    
+
     <!-- Header section -->
-    <header>
+    <header class="head">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
-      <div>
-          <h2>Your Name</h2>
+      <div class = "name">
+          <h2>Lance Y</h2>
       </div>
-  </header>
+    </header>
 
-    <main></main>
+    <!-- Main Section -->
+    <main class="container">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+      <p>Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...
+      </p>
+    </main>
   </body>
 </html>
 
