--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <!-- New Tweets CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Tweets CSS -->
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -73,6 +76,29 @@
           </div>
         </form>
       </section>
+
+    <section class="tweet-container">
+      <article>
+        <header>
+          <div class="profile"><img src="https://i.imgur.com/73hZDYK.png"> </div>
+          <div class="username">Newton</div>
+          <div class="userid">@SirIsaac</div>
+
+        </header>
+        <main class='tweet-content'>
+          If I have seen further by standing on the shoulder of giants 
+        </main>
+        <footer>
+          <div class="timestamp">10 days ago</div>
+        <div class="icons"> 
+          <i id="retweet" class="fa-solid fa-retweet"></i>
+          <i id="flag" class="fa-solid fa-flag"></i>
+          <i id="heart" class="fa-solid fa-heart"></i>
+        </div>
+        </footer>
+      </article>
+    </section>
+
     </main>
   </body>
 </html>
