--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       </section>
 
     <section class="tweet-container">
-      <article>
+      <!-- <article>
         <header>
           <div class="profile"><img src="https://i.imgur.com/73hZDYK.png"> </div>
           <div class="username">Newton</div>
@@ -91,10 +91,10 @@
         <footer>
           <div class="timestamp">10 days ago</div>
         <div class="icons"> 
-          <i id="retweet" class="fa-solid fa-retweet"></i>
-          <i id="flag" class="fa-solid fa-flag"></i>
-          <i id="heart" class="fa-solid fa-heart"></i>
-        </div>
+          <i class="fa-solid fa-retweet"></i>
+          <i class="fa-solid fa-flag"></i>
+          <i class="fa-solid fa-heart"></i>
+        </div> -->
         </footer>
       </article>
     </section>
