--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    
+    <!-- CDN timeago.js to help with displaying the time -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" ></script>  
 
   </head>
 
