--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@
     
     <!-- CDN timeago.js to help with displaying the time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" ></script>  
-
+    
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   </head>
 
   <body>
@@ -70,34 +71,18 @@
     <!-- Main Section -->
     <main class="container">
       <section class="new-tweet">
+        <section class="validation-error"></section>
         <form method="POST" action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" placeholder=""></textarea>
           <div class="buttonandcounter">
             <button id="btn" type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+            <output id="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
       </section>
 
     <section class="tweet-container">
-      <!-- <article>
-        <header>
-          <div class="profile"><img src="https://i.imgur.com/73hZDYK.png"> </div>
-          <div class="username">Newton</div>
-          <div class="userid">@SirIsaac</div>
-
-        </header>
-        <main class='tweet-content'>
-          If I have seen further by standing on the shoulder of giants 
-        </main>
-        <footer>
-          <div class="timestamp">10 days ago</div>
-        <div class="icons"> 
-          <i class="fa-solid fa-retweet"></i>
-          <i class="fa-solid fa-flag"></i>
-          <i class="fa-solid fa-heart"></i>
-        </div> -->
         </footer>
       </article>
     </section>
