added sliding validation errors, minor styling changes,  started readme.md

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <!-- Tweets CSS -->
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
+    <!-- Errors CSS -->
+    <link rel="stylesheet" href="/styles/error.css" type="text/css" />    
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
